# specy-road

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  project-design-for-claudeandcursor.md  pyproject.toml  requirements-ci.in  requirements-ci.txt  requirements.txt  roadmap.md
.github/: dependabot.yml
agents/: README.md
constitution/: principles.md  purpose.md
constraints/: README.md  file-limits.yaml
docs/: architecture.md  bootstrap-next-steps.md  contributor-guide.md  dev-workflow.md  git-workflow.md  grind-session.md  install-and-usage.md  install.md  optional-agent-review-prompts.md  optional-ai-tooling-patterns.md  philosophy-and-scope.md  pm-gui-redesign.md  pm-gui.md  pm-llm-review.md  pm-workflow.md  release-runbook.md  roadmap-authoring.md  setup.md  supply-chain-security.md  toolkit-development.md
planning/: README.md
playground/: README.md
prompts/: cleanup_prompts.md  compliance_prompts.md  features_changes_debuging_prompts.md  project-design-for-claudeandcursor.md
roadmap/: README.md  registry.yaml  roadmap.yaml
schemas/: registry.schema.json  roadmap.schema.json
scripts/: check_release_version.py  do_next_task.py  export_roadmap_md.py  finish_task.py  generate_brief.py  migrate_stable_node_keys.py  planning_artifacts.py  pm_sync.py  post_release_readme_cleanup.py  review_node.py  roadmap_chunk_utils.py  roadmap_crud.py  roadmap_crud_argparse.py  roadmap_crud_ops.py  roadmap_edit_fields.py  roadmap_gui.py  roadmap_gui_editor.py  roadmap_gui_gantt.py  roadmap_gui_lib.py  roadmap_gui_planning.py  roadmap_gui_remote.py  roadmap_gui_toolbar.py  roadmap_gui_tree.py  roadmap_layout.py  roadmap_load.py  roadmap_node_keys.py  roadmap_outline_ops.py  roadmap_outline_renumber.py  scaffold_planning.py  update_specy_road.py  validate_file_limits.py  validate_roadmap.py  verify_wheel_contents.py
shared/: README.md
specify/: README.md
specy_road/: __init__.py  cli.py  cli_init.py  cli_init_argparse.py  constitution_scaffold.py  do_next_milestone_pickup.py  feature_rm_registry.py  file_limits_engine.py  finish_land_integration.py  finish_milestone_rollout.py  finish_modes.py  finish_pr_body.py  git_milestone_delivery.py  git_subprocess.py  git_sync_status.py  git_workflow_config.py  governance_completion.py  gui_app.py  gui_app_api.py  gui_app_helpers.py  gui_app_models.py  gui_app_routes_core.py  gui_app_routes_nodes.py  gui_app_routes_planning.py  gui_app_routes_publish.py  gui_app_routes_workspace.py  init_project.py  milestone_chunk_io.py  milestone_lock.py  milestone_rollup_git.py  milestone_session.py  milestone_subtree.py  on_complete_pickup.py  on_complete_session.py  pm_gui_concurrency.py  pm_gui_fingerprint.py  (+9 more)
(+756 files in other folders)
