[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "specy-road"
version = "0.1.0"
description = "Roadmap-first coordination kit for humans and AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "PyYAML>=6.0",
  "jsonschema>=4.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[project.scripts]
specy-road = "specy_road.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["specy_road*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
