[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "specy-road"
# Canonical version: `specy_road.__version__` reads this via importlib.metadata.
version = "0.1.0"
description = "Roadmap-first coordination kit for humans and AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "PyYAML>=6.0",
  "jsonschema>=4.20",
  "ruamel.yaml>=0.18",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]
review = [
  "openai>=1.40",
]
gui = [
  "streamlit>=1.33",
  "plotly>=5.18",
  "watchdog>=4.0",
  "requests>=2.31",
  "openai>=1.40",
]

[project.scripts]
specy-road = "specy_road.cli:main"
specyrd = "specy_road.specyrd_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["specy_road*"]

[tool.setuptools.package-data]
specy_road = ["templates/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
